--- a/main.css
+++ b/main.css
@@ -346,7 +346,7 @@
 	right: 1.5%;
 	width: 9px;
 	height: 135px;
-	background: url(/books/20thdenmoku/img/top/pageTop.png) no-repeat center / contain;
+	background: url(/111.png) no-repeat center / contain;
 	opacity: 0;
 	z-index: 99;
 	-webkit-transition: .3s ease-in-out; transition: .3s ease-in-out;
@@ -445,7 +445,7 @@
 	.navigationBgSp {
 		width: 100%;
 		height: 100%;
-		background: url(/books/20thdenmoku/img/top/keyvisual.jpg) no-repeat right / cover;
+		background: url(/222.jpg) no-repeat right / cover;
 		opacity: .25;
 		-webkit-transform: scale(1.25);
 		transform: scale(1.25);
